# snowleopard_py

./: .gitignore  API-OUTPUT-STRUCTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: build_wheel.sh  common.sh  makevenv.sh  publish_wheel.sh  reqs_builder.txt
src/snowleopard/: __init__.py  async_client.py  cli.py  client.py  client_base.py  error.py  errors.py  models.py
tests/: conftest.py  test_cli.py  test_client.py  test_main.py
tests/cassettes/: how_many_superheroes.yaml  how_many_superheroes_no_dfid.yaml  how_many_superheroes_response.yaml  not_in_schema.yaml  query_error.yaml
