[project]
name = "snowleopard"
dynamic = ["version"]

description = "snowleopard.ai client library"

readme = "README.md"
license = {file = "LICENSE"}

authors = [
    { name = "Snowy", email = "hello@snowleopard.ai" }
]
requires-python = ">=3.8"
dependencies = []

# list of classifier strings, defined here: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.scripts]
snowy = "snowleopard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/snowleopard/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.14.4",
]
